<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/snow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/clickToShow"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
       	android:id="@+id/gap"
      	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal"
       	android:layout_marginTop="10dp"
       	android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<ScrollView 
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/gap" >
         
    <LinearLayout
   		android:background="@color/cornflowerblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >
    
    <Button
        android:id="@+id/f1"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/changeUserSettings" />
        
    <Button
        android:id="@+id/f2"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/dweetIt" />
    
    <Button
        android:id="@+id/f3"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/showPreviouslyDweetedSteps" />
        
    <Button
        android:id="@+id/f4"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/timeline" />
    
    <Button
        android:id="@+id/f5"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/showRecordedLocationsOnGoogleMaps" />

    <Button
        android:id="@+id/f6"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/compareWithAFriend" />
    
    <Button
        android:id="@+id/f7"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/compareWithAFriend" />
    
    <Button
        android:id="@+id/f8"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/compareWithAFriend" />
    
    <Button
        android:id="@+id/f9"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/compareWithAFriend" />
    
    <Button
        android:id="@+id/f10"
        android:textColor="@color/darkred"
        android:background="@color/powderblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:text="@string/compareWithAFriend" />
    
    </LinearLayout>
    
    </ScrollView>
    
</LinearLayout >
